# grobj

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/grobj/: dump.h  grimrock.h
src/: dump.cpp  grimrock.cpp  main.cpp
